--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,13 +1,13 @@
-@import url('/assets/css/reset.css');
-@import url('/assets/css/global.css');
+@import url('./assets/css/reset.css');
+@import url('./assets/css/global.css');
 
 body {
   background-color: var(--primary-color);
 }
 
 body::before {
-  content: " ";
-  background-image: url('/assets/images/spider-man-background.jpg');
+  content: ' ';
+  background-image: url('../assets/images/spider-man-background.jpg');
   width: 100%;
   height: 100%;
   position: absolute;
@@ -15,15 +15,13 @@ body::before {
   background-position: center;
   background-size: cover;
   opacity: 0.2;
-  transition: background-image  1s ease-in-out, opacity 1s ease-in-out;
-
+  transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
 }
 .s-menu {
   padding: 1rem 0;
   width: 100%;
   text-align: center;
   position: relative;
-  
 }
 .s-menu__item {
   display: inline-block;
@@ -34,7 +32,6 @@ body::before {
   width: 2.5rem;
   margin: 0 1.25rem;
   vertical-align: middle;
-
 }
 .s-container {
   position: relative;
@@ -49,20 +46,16 @@ body::before {
   width: 100%;
   height: 70vh;
   position: absolute;
-  transition: filter .5s ease-in-out;
-
+  transition: filter 0.5s ease-in-out;
 }
 .s-card:nth-child(1) {
   transform: rotateY(0deg) translateZ(50vw);
-
 }
 .s-card:nth-child(2) {
   transform: rotateY(120deg) translateZ(50vw);
-
 }
 .s-card:nth-child(3) {
   transform: rotateY(240deg) translateZ(50vw);
-
 }
 .s-card__background {
   width: 100%;
@@ -72,7 +65,7 @@ body::before {
   opacity: 1;
   transition: 1s ease-in-out;
 }
-.s-card__image  {
+.s-card__image {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -87,9 +80,8 @@ body::before {
   width: 100%;
   bottom: 0;
   transition: bototm 1s ease-in-out;
-
 }
-.s-controller  {
+.s-controller {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -113,7 +105,6 @@ body::before {
   cursor: pointer;
   z-index: 1;
   transition: transform 0.3s ease-in-out;
-
 }
 .s-controller__button:hover {
   transform: scale(1.1);
@@ -132,41 +123,38 @@ body::before {
   width: 50%;
   height: 2px;
   position: absolute;
-  
 }
 /* Hover Animation */
 .s-card--hovered .s-card__background {
   cursor: pointer;
   opacity: 0;
-
 }
 .s-card--hovered .s-card__image {
   transform: scale(1.4);
 }
 
 body#spider-man-01-hovered::before {
-  background-image: url('/assets/images/pic-sm-bg-01.jpg');
+  background-image: url('../assets/images/pic-sm-bg-01.jpg');
 }
 body#spider-man-02-hovered::before {
-  background-image: url('/assets/images/pic-sm-bg-02.jpg');
+  background-image: url('../assets/images/pic-sm-bg-02.jpg');
 }
 body#spider-man-03-hovered::before {
-  background-image: url('/assets/images/pic-sm-bg-03.jpg');
+  background-image: url('../assets/images/pic-sm-bg-03.jpg');
 }
-body[id^="spider-man-"]::before {
+body[id^='spider-man-']::before {
   opacity: 1;
 }
-body[id^="spider-man-"] .s-card:not(.s-card--hovered){
-  filter:grayscale(100%);
+body[id^='spider-man-'] .s-card:not(.s-card--hovered) {
+  filter: grayscale(100%);
 }
 .s-card--hovered .s-card__title {
   bottom: 50%;
 }
 .s-cards-carousel {
-  display: flex;  
+  display: flex;
   justify-content: center;
   width: calc(100vw / 3 - 10%);
   transform-style: preserve-3d;
   transition: transform 0.4s ease-in;
-
 }
