--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -7,14 +7,13 @@
 
 .s-wrapper {
   display: flex;
-  
-  flex-flow: row nowrap; 
-  background-color: aqua; 
+
+  flex-flow: row nowrap;
+  background-color: aqua;
 }
 .s-wrapper video {
   position: fixed;
   width: 100%;
-  
 }
 
 .s-wrapper .s-left-column {
@@ -30,12 +29,11 @@
   z-index: 1;
 }
 
-.s-wrapper .s-main-content{
+.s-wrapper .s-main-content {
   height: 100%;
   width: 100%;
-   padding-left: 130px;
+  padding-left: 130px;
   position: relative;
-  
 }
 .s-wrapper .s-main-content__top {
   height: 80vh;
@@ -55,13 +53,13 @@
   margin-left: 0;
   margin-bottom: 30px;
 }
-.s-wrapper .s-main-content__top .s-description{
-  background: rgba(0,0,0,.7);
+.s-wrapper .s-main-content__top .s-description {
+  background: rgba(0, 0, 0, 0.7);
   max-width: 50%;
   padding: 20px;
   border-radius: 10px;
- }
- .s-wrapper .s-main-content__top .s-description .s-description__text p {
+}
+.s-wrapper .s-main-content__top .s-description .s-description__text p {
   color: white;
   line-height: 170%;
 }
@@ -77,9 +75,6 @@
   flex-direction: row;
 }
 .s-spiderman-01-01 {
-  background-image: url('/assets/images/spiderman-tobey/movie-01/background.png');
+  background-image: url('../assets/images/spiderman-tobey/movie-01/background.png');
   background-size: cover;
-
 }
-
-
