--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -75,6 +75,6 @@
   flex-direction: row;
 }
 .s-spiderman-01-01 {
-  background-image: url('.SpiderVerse/assets/images/spiderman-tobey/movie-01/background.png');
+  background-image: url('SpiderVerse/assets/images/spiderman-tobey/movie-01/background.png');
   background-size: cover;
 }
