--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,5 +1,5 @@
-@import url('./assets/css/reset.css');
-@import url('./assets/css/global.css');
+@import url('/assets/css/reset.css');
+@import url('/assets/css/global.css');
 
 body {
   background-color: var(--primary-color);
@@ -7,7 +7,7 @@ body {
 
 body::before {
   content: ' ';
-  background-image: url('./assets/images/spider-man-background.jpg');
+  background-image: url('/assets/images/spider-man-background.jpg');
   width: 100%;
   height: 100%;
   position: absolute;
