--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,9 +1,9 @@
-@import url('/reset.css');
-@import url('/global.css');
-@import url('/components/_navigator.css');
-@import url('/components/_pills.css');
-@import url('/components/_link-button.css');
-@import url('/components/_gallery.css');
+@import url('SpiderVerse/reset.css');
+@import url('SpiderVerse/global.css');
+@import url('SpiderVerse/components/_navigator.css');
+@import url('SpiderVerse/components/_pills.css');
+@import url('SpiderVerse/components/_link-button.css');
+@import url('SpiderVerse/components/_gallery.css');
 
 .s-wrapper {
   display: flex;
