--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,19 +1,20 @@
-@import url('/reset.css');
-@import url('/global.css');
-@import url('/components/_navigator.css');
-@import url('/components/_pills.css');
-@import url('/components/_link-button.css');
-@import url('/components/_gallery.css');
+@import url('reset.css');
+@import url('global.css');
+@import url('components/_navigator.css');
+@import url('components/_pills.css');
+@import url('components/_link-button.css');
+@import url('components/_gallery.css');
 
 .s-wrapper {
   display: flex;
-
-  flex-flow: row nowrap;
-  background-color: aqua;
+  
+  flex-flow: row nowrap; 
+  background-color: aqua; 
 }
 .s-wrapper video {
   position: fixed;
   width: 100%;
+  
 }
 
 .s-wrapper .s-left-column {
@@ -29,11 +30,12 @@
   z-index: 1;
 }
 
-.s-wrapper .s-main-content {
+.s-wrapper .s-main-content{
   height: 100%;
   width: 100%;
-  padding-left: 130px;
+   padding-left: 130px;
   position: relative;
+  
 }
 .s-wrapper .s-main-content__top {
   height: 80vh;
@@ -53,13 +55,13 @@
   margin-left: 0;
   margin-bottom: 30px;
 }
-.s-wrapper .s-main-content__top .s-description {
-  background: rgba(0, 0, 0, 0.7);
+.s-wrapper .s-main-content__top .s-description{
+  background: rgba(0,0,0,.7);
   max-width: 50%;
   padding: 20px;
   border-radius: 10px;
-}
-.s-wrapper .s-main-content__top .s-description .s-description__text p {
+ }
+ .s-wrapper .s-main-content__top .s-description .s-description__text p {
   color: white;
   line-height: 170%;
 }
@@ -77,4 +79,7 @@
 .s-spiderman-01-01 {
   background-image: url('/assets/images/spiderman-tobey/movie-01/background.png');
   background-size: cover;
+
 }
+
+
